@@ -27,8 +27,9 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Document installation of localization tasks.
+  * Document the debian-installer/add-kernel-opts preconfiguration option.
 
- -- Frans Pop <fjp@debian.org>  Thu, 21 May 2009 13:11:16 +0200
+ -- Frans Pop <fjp@debian.org>  Mon, 08 Jun 2009 12:50:20 +0200
 
 installation-guide (20090427) unstable; urgency=low
 
